--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,25 +2,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.openxoft.drivers">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:name=".application.DriverApplicaton"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.LoginActivity">
+        <activity android:name=".activities.SplashActivity"  android:screenOrientation="portrait"  android:theme="@style/AppTheme1" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.AssignedBookingDetailActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activities.AssignedBookingActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activities.ForgotActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activities.LoginActivity" android:screenOrientation="portrait"  />
+        <activity android:name=".activities.AssignedBookingDetailActivity" android:screenOrientation="portrait" android:theme="@style/AppTheme1" android:label="Duty Detail"/>
+        <activity android:name=".activities.AssignedBookingActivity" android:screenOrientation="portrait"  android:label="Duties List"/>
+        <activity android:name=".activities.ForgotActivity" android:screenOrientation="portrait" android:label="Forgot Password"/>
+        <service
+            android:name=".services.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+        <service
+            android:name=".services.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
